# oop

./: .coverage  .flake8  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_classes_py.html
src/: classes.py
tests/: test_classes.py
